--- a/rental-mobil/index.html
+++ b/rental-mobil/index.html
@@ -336,7 +336,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 		<li class="staff">
 			<div class="staff-details">
 				<ul class="staff-info">
-					<li><h3>All New Avanza Automatic</h3></li>
+					<li>All New Avanza Automatic</li>
 					<li><small>325k / hari (Lepas Kunci)</small></li>
 				</ul>
 			</div>
@@ -386,7 +386,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 	<li class="staff">
 			<div class="staff-details">
 				<ul class="staff-info">
-					<li><h3>All New Avanza Manual</h3></li>
+					<li>All New Avanza Manual</li>
 					<li><small>275K / hari (Lepas Kunci)</small></li>
 				</ul>
 			</div>
@@ -434,7 +434,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 		<li class="staff">
 			<div class="staff-details">
 				<ul class="staff-info">
-					<li><h3>Grand Max PU Box</h3></li>
+					<li>Grand Max PU Box</li>
 					<li><small>325k / hari (Lepas Kunci)</small></li>
 				</ul>
 			</div>
@@ -484,7 +484,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 	    <li class="staff">
 			<div class="staff-details">
 				<ul class="staff-info">
-					<li><h3>Honda Brio Manual</h3></li>
+					<li>Honda Brio Manual</li>
 					<li><small>275k / hari (Lepas Kunci)</small></li>
 				</ul>
 			</div>
@@ -532,7 +532,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 	    <li class="staff">
 			<div class="staff-details">
 				<ul class="staff-info">
-					<li><h3>Honda Brio Matic</h3></li>
+					<li>Honda Brio Matic</li>
 					<li><small>300K / hari (Lepas Kunci)</small></li>
 				</ul>
 			</div>
@@ -558,7 +558,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 	    <li class="staff">
 			<div class="staff-details">
 				<ul class="staff-info">
-					<li><h3>Nissan March</h3></li>
+					<li>Nissan March</li>
 					<li><small>275k / hari (Lepas Kunci)</small></li>
 				</ul>
 			</div>
@@ -586,7 +586,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
                 <li class="staff">
 			<div class="staff-details">
 				<ul class="staff-info">
-					<li><h3>Toyota Agya</h3></li>
+					<li>Toyota Agya</li>
 					<li><small>275k / hari (Lepas Kunci)</small></li>
 				</ul>
 			</div>
@@ -636,7 +636,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
                 <li class="staff">
 			<div class="staff-details">
 				<ul class="staff-info">
-					<li><h3>Toyota Calya</h3></li>
+					<li>Toyota Calya</li>
 					<li><small>300K / hari (Lepas Kunci)</small></li>
 				</ul>
 			</div>
