--- a/rental-mobil/index.html
+++ b/rental-mobil/index.html
@@ -302,8 +302,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	
     
 		<a href="/">Home</a>
+			
+			
 	
-	
+	        <a href="/rental-mobil/" class=" active">Sewa•Motor</a>
+			
+			
     
 		<a href="/rental-mobil/" class=" active">Rental•Mobil</a>
 	
