--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -302,6 +302,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	
     
 		<a href="/" title="Bening Abadi">Home</a>
+			
+			
+			
+	        <a href="/rental-mobil/" class=" active">Sewa•Motor</a>
 	
 	
     
