--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -234,6 +234,10 @@ h1  { text-decoration: underline overline;
 	
     
 		<a href="/">Home</a>
+			
+			
+			
+		<a href="/rental-mobil/">Sewa•Motor</a>
 	
 	
     
