--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -305,7 +305,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			
 			
 			
-	        <a href="/rental-mobil/" class=" active">Sewa•Motor</a>
+	        <a href="/rental-mobil/">Sewa•Motor</a>
 	
 	
     
