--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -237,7 +237,7 @@ h1  { text-decoration: underline overline;
 			
 			
 			
-		<a href="/rental-mobil/">Sewa•Motor</a>
+		<a href="/sewa-motor/">Sewa•Motor</a>
 	
 	
     
