--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <li>- No Telp HP customer yang bisa dihubungi</li>
 <li>- Tanpa uang jaminan</li>
 <li>- Overtime 10% per jam dari Tarif Sewa</li>
-<li><b>- Saat hari High Season harga berbeda dengan harga hari normal</b></li><hr>
+<li><b>- Saat hari High Season harga bisa berbeda dengan harga hari normal</b></li><hr>
 					</ul>
 				</div>
 			</div>
