--- a/rental-mobil/index.html
+++ b/rental-mobil/index.html
@@ -340,8 +340,8 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 		<li class="staff">
 			<div class="staff-details">
 				<ul class="staff-info">
-					<li>All New Avanza Automatic</li>
-					<li><small>325k / hari (Lepas Kunci)</small></li>
+			                <li>All New Avanza Automatic</li>
+					<li><small>300k / hari (Lepas Kunci)</small></li>
 				</ul>
 			</div>
 
@@ -439,7 +439,7 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 			<div class="staff-details">
 				<ul class="staff-info">
 					<li>Grand Max PU Box</li>
-					<li><small>325k / hari (Lepas Kunci)</small></li>
+					<li><small>250k / hari (Lepas Kunci)</small></li>
 				</ul>
 			</div>
 
@@ -454,10 +454,10 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
 
 <ul>
   <li>
-    <h4 id="12-jam-250-ribu">12 Jam 225 ribu</h4>
+    <h4 id="12-jam-250-ribu">12 Jam 200 ribu</h4>
   </li>
   <li>
-    <h4 id="24-jam-300-ribu">24 Jam 275 ribu</h4>
+    <h4 id="24-jam-300-ribu">24 Jam 250 ribu</h4>
   </li>
 </ul>
 
@@ -481,6 +481,208 @@ Pengen jalan2 bareng keluarga tapi ga punya mobil...wkwk😂,ato yg punya mobil 
   <li>
     <h4 id="per-hari-550-ribu">Per Hari  525 ribu</h4>
   </li>
+</ul>
+<p></p>
+			</div>
+		</li>
+	    <li class="staff">
+			<div class="staff-details">
+				<ul class="staff-info">
+					<li>Honda Brio Manual</li>
+					<li><small>275k / hari (Lepas Kunci)</small></li>
+				</ul>
+			</div>
+
+			<div class="staff-bio">
+				<p></p><p><img src="/uploads/brio-manual.jpg" alt="" width="650" height="450" /></p>
+
+<h4 id="harga-sewa"><strong>HARGA SEWA</strong></h4>
+
+<h4 id="lepas-kunci">LEPAS KUNCI</h4>
+
+<ul>
+  <li>
+    <h4 id="12-jam-250-ribu">12 Jam 225 ribu</h4>
+  </li>
+  <li>
+    <h4 id="24-jam-300-ribu">24 Jam 275 ribu</h4>
+  </li>
+</ul>
+
+<h4 id="mobil--driver">Mobil + Driver</h4>
+
+<ul>
+  <li>
+    <h4 id="10-jam-350-ribu">10 Jam 325 ribu</h4>
+  </li>
+  <li>
+    <h4 id="per-hari-450-ribu">Per Hari 425 ribu</h4>
+  </li>
+</ul>
+
+<h4 id="mobil--driver--bbm">Mobil + Driver + BBM</h4>
+
+<ul>
+  <li>
+    <h4 id="10-jam-450-ribu">10 Jam 425 ribu</h4>
+  </li>
+  <li>
+    <h4 id="per-hari-500-ribu">Per Hari 475 ribu</h4>
+  </li>
+</ul>
+<p></p>
+			</div>
+		</li>
+	    <li class="staff">
+			<div class="staff-details">
+				<ul class="staff-info">
+					<li>Honda Brio Matic</li>
+					<li><small>300K / hari (Lepas Kunci)</small></li>
+				</ul>
+			</div>
+
+			<div class="staff-bio">
+				<p></p><p><img src="/uploads/brio.jpg" alt="" width="650" height="450" /></p>
+
+<h4 id="harga-sewa">HARGA SEWA</h4>
+
+<h4 id="lepas-kunci--">LEPAS KUNCI    </h4>
+
+<ul>
+  <li>
+    <h4 id="12-jam-275-ribu">12 Jam 250 ribu</h4>
+  </li>
+  <li>
+    <h4 id="24-jam-325-ribu">24 Jam 300 ribu</h4>
+  </li>
+</ul>
+<p></p>
+			</div>
+		</li>
+	    <li class="staff">
+			<div class="staff-details">
+				<ul class="staff-info">
+					<li>Nissan March</li>
+					<li><small>275k / hari (Lepas Kunci)</small></li>
+				</ul>
+			</div>
+
+			<div class="staff-bio">
+				<p><blockquote>
+  <h4 id="harga-sewa"><strong>HARGA SEWA</strong></h4>
+
+  <h4 id="lepas-kunci">LEPAS KUNCI</h4>
+
+  <ul>
+    <li>
+      <h4 id="12-jam-250-ribu">12 Jam 225 ribu</h4>
+    </li>
+    <li>
+      <h4 id="24-jam-300-ribu">24 Jam 275 ribu</h4>
+    </li>
+  </ul>
+
+  <p><img src="/uploads/march.jpg" alt="" width="650" height="450" /></p>
+</blockquote>
+</p>
+			</div>
+		</li>
+                <li class="staff">
+			<div class="staff-details">
+				<ul class="staff-info">
+					<li>Toyota Agya</li>
+					<li><small>250k / hari (Lepas Kunci)</small></li>
+				</ul>
+			</div>
+
+			<div class="staff-bio">
+				<p><blockquote>
+  <p><img src="/uploads/agya.jpg" alt="" width="300" height="225" /></p>
+</blockquote>
+
+</p><h4 id="harga-sewa"><strong>HARGA SEWA</strong></h4>
+
+<h4 id="lepas-kunci">LEPAS KUNCI</h4>
+
+<ul>
+  <li>
+    <h4 id="12-jam-250-ribu">12 Jam 200 ribu</h4>
+  </li>
+  <li>
+    <h4 id="24-jam-300-ribu">24 Jam 250 ribu</h4>
+  </li>
+</ul>
+
+<h4 id="mobil--driver">Mobil + Driver</h4>
+
+<ul>
+  <li>
+    <h4 id="10-jam-350-ribu">10 Jam 325 ribu</h4>
+  </li>
+  <li>
+    <h4 id="per-hari-450-ribu">Per Hari 425 ribu</h4>
+  </li>
+</ul>
+
+<h4 id="mobil--driver--bbm">Mobil + Driver + BBM</h4>
+
+<ul>
+  <li>
+    <h4 id="10-jam-450-ribu">10 Jam 425 ribu</h4>
+  </li>
+  <li>
+    <h4 id="per-hari-500-ribu">Per Hari 475 ribu</h4>
+  </li>
+</ul>
+<p></p>
+			</div>
+		</li>
+                <li class="staff">
+			<div class="staff-details">
+				<ul class="staff-info">
+					<li>Toyota Calya</li>
+					<li><small>300K / hari (Lepas Kunci)</small></li>
+				</ul>
+			</div>
+
+			<div class="staff-bio">
+				<p><blockquote>
+  <p><img src="/uploads/calya.jpg" alt="" width="300" height="225" /></p>
+</blockquote>
+
+</p><h4 id="harga-sewa"><strong>HARGA SEWA</strong></h4>
+
+<h4 id="lepas-kunci">LEPAS KUNCI</h4>
+
+<ul>
+  <li>
+    <h4 id="12-jam-275-ribu">12 Jam 250 ribu</h4>
+  </li>
+  <li>
+    <h4 id="24-jam-325-ribu">24 Jam 300 ribu</h4>
+  </li>
+</ul>
+
+<h4 id="mobil--driver">Mobil + Driver</h4>
+
+<ul>
+  <li>
+    <h4 id="10-jam-350-ribu">10 Jam 325 ribu</h4>
+  </li>
+  <li>
+    <h4 id="per-hari-450-ribu">Per Hari 425 ribu</h4>
+  </li>
+</ul>
+
+<h4 id="mobil--driver--bbm">Mobil + Driver + BBM</h4>
+
+<ul>
+  <li>
+    <h4 id="10-jam-450-ribu">10 Jam 425 ribu</h4>
+  </li>
+  <li>
+    <h4 id="per-hari-500-ribu">Per Hari 475 ribu</h4>
+  </li>		
 </ul>
 <p></p>
 			</div>
