--- a/sewa-motor/index.html
+++ b/sewa-motor/index.html
@@ -389,7 +389,7 @@ h3  { text-decoration: underline overline;
 
 					<li><b>HONDA BEAT STREET NEW</b></li>
 
-					<li><small>✓ 55 RB MAHASISWA ✓ 65 RB UMUM</small></li>
+					<li><small>✓ 65 RB MAHASISWA ✓ 75 RB UMUM</small></li>
 
 				</ul>
 
@@ -413,13 +413,13 @@ h3  { text-decoration: underline overline;
 
   <li>
 
-    <h4 id="65-ribu-karyumum">65 ribu (kary/umum)</h4>
+    <h4 id="65-ribu-karyumum">75 ribu (kary/umum)</h4>
 
   </li>
 
   <li>
 
-    <h4 id="55-ribu-mahasiswa-jogja">55 ribu (mahasiswa jogja)</h4>
+    <h4 id="55-ribu-mahasiswa-jogja">65 ribu (mahasiswa jogja)</h4>
 
   </li>
 
@@ -459,7 +459,7 @@ h3  { text-decoration: underline overline;
 
 					<li><b>HONDA GENIO NEW</b></li>
 
-					<li><small>✓ 55 RB MAHASISWA ✓ 65 RB UMUM</small></li>
+					<li><small>✓ 70 RB MAHASISWA ✓ 80 RB UMUM</small></li>
 
 				</ul>
 
@@ -483,13 +483,13 @@ h3  { text-decoration: underline overline;
 
   <li>
 
-    <h4 id="65-ribu-karyumum">65 ribu (kary/umum)</h4>
+    <h4 id="65-ribu-karyumum">80 ribu (kary/umum)</h4>
 
   </li>
 
   <li>
 
-    <h4 id="55-ribu-mahasiswa-jogja">55 ribu (mahasiswa jogja)</h4>
+    <h4 id="55-ribu-mahasiswa-jogja">70 ribu (mahasiswa jogja)</h4>
 
   </li>
 
@@ -529,7 +529,7 @@ h3  { text-decoration: underline overline;
 
 					<li><b>Honda Beat</b></li>
 
-					<li><small>✓ 50 RB MAHASISWA ✓ 60 RB UMUM</small></li>
+					<li><small>✓ 60 RB MAHASISWA ✓ 70 RB UMUM</small></li>
 
 				</ul>
 
@@ -553,13 +553,13 @@ h3  { text-decoration: underline overline;
 
   <li>
 
-    <h4 id="60000-karyumum">60.000 (kary/umum)</h4>
+    <h4 id="60000-karyumum">70.000 (kary/umum)</h4>
 
   </li>
 
   <li>
 
-    <h4 id="50000-mahasiswa-jogja">50.000 (mahasiswa jogja)</h4>
+    <h4 id="50000-mahasiswa-jogja">60.000 (mahasiswa jogja)</h4>
 
   </li>
 
@@ -599,7 +599,7 @@ h3  { text-decoration: underline overline;
 
 					<li><b>Honda Scoopy</b></li>
 
-					<li><small>✓ 50 RB MAHASISWA ✓ 60 RB UMUM</small></li>
+					<li><small>✓ 70 RB MAHASISWA ✓ 80 RB UMUM</small></li>
 
 				</ul>
 
@@ -623,13 +623,13 @@ h3  { text-decoration: underline overline;
 
   <li>
 
-    <h4 id="60000-karyumum">60.000 (kary/umum)</h4>
+    <h4 id="60000-karyumum">80.000 (kary/umum)</h4>
 
   </li>
 
   <li>
 
-    <h4 id="50000-mahasiswa-jogja">50.000 (mahasiswa jogja)</h4>
+    <h4 id="50000-mahasiswa-jogja">70.000 (mahasiswa jogja)</h4>
 
   </li>
 
@@ -667,9 +667,9 @@ h3  { text-decoration: underline overline;
 
 				<ul class="staff-info">
 
-					<li><b>Honda Vario</b></li>
+					<li><b>Honda Vario 150</b></li>
 
-					<li><small>✓ 50 RB MAHASISWA ✓ 70 RB UMUM</small></li>
+					<li><small>✓ 90 RB MAHASISWA ✓ 100 RB UMUM</small></li>
 
 				</ul>
 
@@ -693,13 +693,13 @@ h3  { text-decoration: underline overline;
 
   <li>
 
-    <h4 id="60000-karyumum">60.000 (kary/umum)</h4>
+    <h4 id="60000-karyumum">100.000 (kary/umum)</h4>
 
   </li>
 
   <li>
 
-    <h4 id="50000-mahasiswa-jogja">50.000 (mahasiswa jogja)</h4>
+    <h4 id="50000-mahasiswa-jogja">90.000 (mahasiswa jogja)</h4>
 
   </li>
 
