--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -250,7 +250,96 @@ h1  { text-decoration: underline overline;
 </nav>
 		<section class="main">
 			<div class="container" data-cms-content-wrapper="/_layouts/default.html">
-				<html lang="id">
+<head>
+<meta charset="utf-8">
+
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
+
+<script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+
+  <!-- Demo styles -->
+  <style>
+    html,
+    body {
+      position: relative;
+      height: 100%;
+    }
+
+    body {
+      background: #eee;
+      font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+      font-size: 14px;
+      color: #000;
+      margin: 0;
+      padding: 0;
+    }
+
+    .swiper-container {
+      width: 100%;
+      height: 100%;
+    }
+
+    .swiper-slide {
+      text-align: center;
+      font-size: 28px;
+      background: #fff;
+
+      /* Center slide text vertically */
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      -webkit-justify-content: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      -webkit-align-items: center;
+      align-items: center;
+    }
+  </style>
+  </head>
+  <body>
+
+  <!-- Swiper -->
+  <div class="swiper-container">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide"><img src="/uploads/fjimg_20191221_104723_1590363216544.jpg"></div>
+      <div class="swiper-slide"><img src="/uploads/FJIMG_20191221_104907_1606498553525.jpg"></div>
+      <div class="swiper-slide"><img src="/uploads/IMG_20181122_122550-02_1544694178831_1606498364403.jpg"></div>
+      <div class="swiper-slide"><img src="/uploads/PANO_20181122_122842_1544445323884_1606498447847.jpg"></div>
+    </div>
+    <!-- Add Pagination -->
+    <div class="swiper-pagination"></div>
+  </div>
+
+  <!-- Swiper JS -->
+<script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+
+  <!-- Initialize Swiper -->
+  <script>
+    var swiper = new Swiper('.swiper-container', {
+      spaceBetween: 30,
+      centeredSlides: true,
+      autoplay: {
+        delay: 2500,
+        disableOnInteraction: false,
+      },
+      pagination: {
+        el: '.swiper-pagination',
+        clickable: true,
+      },
+      navigation: {
+        nextEl: '.swiper-button-next',
+        prevEl: '.swiper-button-prev',
+      },
+    });
+  </script>
+</body>
+</html>				
 	<div class="page-header"> 
          <h1>Objek Wisata Jogja</h1>
 	</div>
