--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -287,12 +287,13 @@ h1  { text-decoration: underline overline;
 		<!-- Swiper -->
   <div class="swiper-container">
     <div class="swiper-wrapper">
-      <div class="swiper-slide"><img src="/uploads/fjimg_20191221_104723_1590363216544.jpg"></div>
-      <div class="swiper-slide"><img src="/uploads/FJIMG_20191221_104907_1606498553525.jpg"></div>
-      <div class="swiper-slide"><img src="/uploads/IMG_20181122_122550-02_1544694178831_1606498364403.jpg"></div>
-      <div class="swiper-slide"><img src="/uploads/PANO_20181122_122842_1544445323884_1606498447847.jpg"></div>
+      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/hugo-creative-portfolio-theme/master/exampleSite/static/uploads/fjimg_20191221_104723_1590363216544.jpg"></div>
+      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/hugo-creative-portfolio-theme/master/exampleSite/static/uploads/FJIMG_20191221_104907_1606498553525.jpg"></div>
+      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/hugo-creative-portfolio-theme/master/exampleSite/static/uploads/IMG_20181122_122550-02_1544694178831_1606498364403.jpg"></div>
+      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/hugo-creative-portfolio-theme/master/exampleSite/static/uploads/PANO_20181122_122842_1544445323884_1606498447847.jpg"></div>
     </div>
-    <!-- Add Pagination -->
+ https://raw.githubusercontent.com/ariefbuddies/hugo-creative-portfolio-theme/master/exampleSite/static/upload
+   <!-- Add Pagination -->
     <div class="swiper-pagination"></div>
   </div>
 
