--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -218,7 +218,12 @@ nav  {position:flex; width:100%; display:flex; justify-content:center; backgroun
 nav a {display:inline-block; text-decoration:none; padding:4px; color:#444; letter-spacing:1px; font-size:.6em; text-shadow:1px 1px 1px #aaa} nav a.active {color:red} nav a:hover {color:#000}
 h1  { text-decoration: underline overline;
 </style>
+</head>
+<head>
 <style>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+
 <!-- Demo styles -->
     html,
     body {
