--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -227,7 +227,7 @@ h1  { text-decoration: underline overline;
 <!-- Demo styles -->
     html,
     body {
-      position: relative;
+      position: fixed;
       height: 100%;
     }
 
@@ -319,7 +319,7 @@ h1  { text-decoration: underline overline;
       },
       pagination: {
         el: '.swiper-pagination',
-        clickable: false,
+        clickable: true,
       },
       navigation: {
         nextEl: '.swiper-button-next',
@@ -328,10 +328,7 @@ h1  { text-decoration: underline overline;
     });
   </script>			
 <div class="container" data-cms-content-wrapper="/_layouts/default.html">
-
-  
-			
-	<div class="page-header"> 
+<div class="page-header"> 
          <h1>Objek Wisata Jogja</h1>
 	</div>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
