--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -227,8 +227,8 @@ h1  { text-decoration: underline overline;
 <!-- Demo styles -->
     html,
     body {
-      position: fixed;
-      height: 100%;
+      position: relative;
+      height: 50%;
     }
 
     body {
