--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -318,6 +318,8 @@ h1  { text-decoration: underline overline;
 
 			</div>
 		</section>
+</body>
+<body>
 <!-- Swiper -->
   <div class="swiper-container">
     <div class="swiper-wrapper">
@@ -351,7 +353,9 @@ h1  { text-decoration: underline overline;
         prevEl: '.swiper-button-prev',
       },
     });
-  </script>		      
+  </script>
+</body>
+<body>		      
 			<section class="quote-section">
 				<p class="container editable" data-cms-source="/sewa-motor/index.html" data-cms-index="2">
 					HOTLINE (0274)583197 &amp; (0274)547440 Untuk informasi lebih lanjut
