--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -270,7 +270,7 @@ h1  { text-decoration: underline overline;
 <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
 
 </head>
-  <body>
+<body>
 		<nav>
 	
 	
@@ -316,7 +316,62 @@ h1  { text-decoration: underline overline;
 </div>
 		</section>
 </body>
-<body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <title>Swiper demo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
+
+<script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+<!-- Demo styles -->
+  <style>
+    html,
+    body {
+      position: relative;
+      height: 100%;
+    }
+
+    body {
+      background: #eee;
+      font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+      font-size: 14px;
+      color: #000;
+      margin: 0;
+      padding: 0;
+    }
+
+    .swiper-container {
+      width: 100%;
+      height: 100%;
+    }
+
+    .swiper-slide {
+      text-align: center;
+      font-size: 18px;
+      background: #fff;
+
+      /* Center slide text vertically */
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      -webkit-justify-content: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      -webkit-align-items: center;
+      align-items: center;
+    }
+  </style>
+</head>
+</body>
 <!-- Swiper -->
   <div class="swiper-container">
     <div class="swiper-wrapper">
@@ -352,6 +407,8 @@ h1  { text-decoration: underline overline;
     });
   </script>
 </body>
+</html>
+<html>
 <body>		      
 			<section class="quote-section">
 				<p class="container editable" data-cms-source="/sewa-motor/index.html" data-cms-index="2">
