--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -424,7 +424,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       },
       pagination: {
         el: '.swiper-pagination',
-        clickable: true,
+        clickable: false,
       },
       navigation: {
         nextEl: '.swiper-button-next',
