--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -420,7 +420,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       centeredSlides: true,
       autoplay: {
         delay: 2500,
-        disableOnInteraction: false,
+        disableOnInteraction: true,
       },
       pagination: {
         el: '.swiper-pagination',
