--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -315,10 +315,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     
 		<a href="/penginapan">Penginapan</a>
 	
-</nav>
-	
+</nav>	
 <section class="main">	
 <div class="container" data-cms-content-wrapper="/_layouts/default.html">
+<html lang="id">
+<head>
+<style>
+h3  { text-decoration: underline overline;
+    }
+</style>
 <div class="page-header"> 
          <h1>Objek Wisata Jogja</h1>
 	</div>
