--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -345,10 +345,10 @@ h3  { text-decoration: underline overline;
 		<p><img width="1600" height="902" src="/uploads/batu-papal-yogyakarta.jpg" /></p>
 		</div>
 </article>
+</head></body></html>
 </div>
 		</section>
-</body>
-</html>
+
 <!DOCTYPE html>
 <html lang="en">
 
