--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -358,7 +358,8 @@ h3  { text-decoration: underline overline;
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 
 
-<script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 <!-- Demo styles -->
   <style>
     html,
