--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -418,7 +418,7 @@ h3  { text-decoration: underline overline;
   </div>
  <!-- Swiper JS -->
 
-<script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
   <!-- Initialize Swiper -->
   <script>
