--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -345,7 +345,7 @@ h3  { text-decoration: underline overline;
 		<p><img width="1600" height="902" src="/uploads/batu-papal-yogyakarta.jpg" /></p>
 		</div>
 </article>
-</head></body></html>
+</head>
 </div>
 		</section>
 
