--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -326,7 +326,7 @@ h3  { text-decoration: underline overline;
 </style>
 
 	<div class="page-header"> 
-         <h3>Hubungi kami</h3>
+         <h3>Obyek Wisata Jogja</h3>
 	</div>
 
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
