--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -330,44 +330,21 @@ h3  { text-decoration: underline overline;
 	</div>
 
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
-	<p class="editable" data-cms-source="/contact/index.html" data-cms-index="0">
-		Silahkan datang dan berkunjung atau menghubungi kami melalui telepon fixed line dan email serta WA. Kami akan secepatnya membalas email anda. Terima kasih...
-	</p>
-
-<div class="columns">
-	<div class="column">
-		<p class="editor-link"><a href="cloudcannon:collections/_data/company.yml" class="btn"><strong>&#9998;</strong> Update Company Details</a></p>
-
-		<label>Phone Number</label>
-		<p class="contact-info"><a href="tel:(0274)583197">(0274)583197</a></p>
-
-		<label>Email Address</label>
-		<p class="contact-info"><a href="mailto:adjiazief@yahoo.co.id">adjiazief@yahoo.co.id</a></p>
-
-		<label>Postal Address</label>
-		<address class="contact-info">Samirono CT VI / 22B Yogyakarta 55281</address>
-		<label>Address</label>
-		<address class="contact-info">Samirono CT VI / 22B Yogyakarta</address>
-	</div>
-
-	<div class="column">
-		<form method="post" action="https://formspree.io/mlejryqz">
-			<label for="email_address">Email Address</label>
-			<input id="email_address" type="text" name="email" />
-
-			<label for="name">Name</label>
-			<input id="name" type="text" name="name" />
-
-			<label for="message">Message</label>
-			<textarea id="message" name="message"></textarea>
-
-			<input type="hidden" name="_to" value="adjiazief@yahoo.co.id" />
-			<input type="text" name="_gotcha" style="display: none;" />
-
-			<input type="submit" value="Send Message" />
-		</form>
-	</div>
-</div>
+	<div class="editable" data-cms-source="/objek-wisata-jogja/index.html" data-cms-index="0">
+		<p>Kami berusaha mengumpulkan destinasi tujuan obyek wisata jogja favorit ini untuk menjadi tujuan utama wisatawan yang menjadi pelanggan kami, kami akan mengupdate terus daftar seperti di bawah ini:</p><hr />
+		<p>1. TEBING BREKSI</p>
+		<p>Salah satu destinasi favorit di Yogyakarta saat ini, terletak di Kabupaten Sleman, DIY. Berawal dari tebing tebing kapur yang dipahat, tebing ini sekarang menjadi salah satu tujuan wisata teramai di Yogyakarta.</p>
+		<p><img width="700" height="393" src="/uploads/tebing-breksi-wisata-murah-jogja.jpg" /></p>
+        <iframe width="300" height="220" src="https://www.youtube.com/embed/7BkdQUKRjtI?color=white&theme=light"></iframe>
+		<p>2. CANDI IJO</p>
+		<p>Setelah mengunjungi tebing breksi, anda bisa langsung lurus keatas menuju Candi Ijo, sebuah kompleks candi hindu, terletak di 4 km sebelah selatan Candi Boko. Candi Ijo termasuk salah satu candi yang tertinggi di DIY.&nbsp;</p>
+		<blockquote>
+			<p><img width="400" height="266" src="/uploads/candi-ijo.JPG" /></p>
+		</blockquote>
+		<p>3. BATU PAPAL</p>
+		<p>Setelah dari Candi Ijo, perjalanan anda bisa diteruskan menuju puncak Batu Papal, salah satu tempat di Jogja yang memiliki view indah untuk melihat matahari terbit.</p>
+		<p><img width="1600" height="902" src="/uploads/batu-papal-yogyakarta.jpg" /></p>
+		</div>
 </article>
 </head>
 			</div>
