--- a/objek-wisata-jogja/ind2.html
+++ b/objek-wisata-jogja/ind2.html
@@ -354,7 +354,7 @@ h3  { text-decoration: underline overline;
 
 <head>
   <meta charset="utf-8">
-  <title>Swiper demo</title>
+  <title>Bening Room</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 
 
@@ -407,10 +407,9 @@ h3  { text-decoration: underline overline;
 <!-- Swiper -->
   <div class="swiper-container">
     <div class="swiper-wrapper">
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/hugo-creative-portfolio-theme/master/exampleSite/static/uploads/fjimg_20191221_104723_1590363216544.jpg"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/hugo-creative-portfolio-theme/master/exampleSite/static/uploads/FJIMG_20191221_104907_1606498553525.jpg"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/hugo-creative-portfolio-theme/master/exampleSite/static/uploads/IMG_20181122_122550-02_1544694178831_1606498364403.jpg"></div>
-      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/hugo-creative-portfolio-theme/master/exampleSite/static/uploads/PANO_20181122_122842_1544445323884_1606498447847.jpg"></div>
+      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k1.jpg"></div>
+      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k2.jpg"></div>
+      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k3.jpg"></div>
     </div>
 </div>
    <!-- Add Pagination -->
