--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -396,6 +396,88 @@ h3  { text-decoration: underline overline;
   <p><img src="/uploads/content-5b18a82fb5c8e-e1560855835374.jpg" alt="" width="150" height="113" /></p>
 </blockquote>
 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <title>Bening Room</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+
+
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<!-- Demo styles -->
+  <style>
+    html,
+    body {
+      position: relative;
+      height: 70%;
+    }
+
+    body {
+      background: #eee;
+      font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+      font-size: 14px;
+      color: #000;
+      margin: 0;
+      padding: 0;
+    }
+
+    .swiper-container {
+      width: 100%;
+      height: 100%;
+    }
+
+    .swiper-slide {
+      text-align: center;
+      font-size: 18px;
+      background: #fff;
+
+      /* Center slide text vertically */
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      -webkit-justify-content: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      -webkit-align-items: center;
+      align-items: center;
+    }
+  </style>
+</head>
+</body>
+<!-- Swiper -->
+  <div class="swiper-container">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k1.jpg"></div>
+      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k2.jpg"></div>
+      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k3.jpg"></div>
+    </div>
+</div>
+   <!-- Add Pagination -->
+    <div class="swiper-pagination"></div>
+  </div>
+ <!-- Swiper JS -->
+
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+  <!-- Initialize Swiper -->
+  <script>
+    var swiper = new Swiper('.swiper-container', {
+      spaceBetween: 60,
+      centeredSlides: true,
+      autoplay: {
+        delay: 2500,
+        disableOnInteraction: true,
+      },
+    });
+  </script>
+
 </p><p><strong>Harga Sewa : Rp. 200.000 / Malam (harga untuk 2 orang)</strong></p>
 
 <ul>
