--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -395,7 +395,7 @@ h3  { text-decoration: underline overline;
 				<p><blockquote>
   <p><img src="/uploads/content-5b18a82fb5c8e-e1560855835374.jpg" alt="" width="150" height="113" /></p>
 </blockquote>
-
+				</html>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -425,8 +425,8 @@ h3  { text-decoration: underline overline;
     }
 
     .swiper-container {
-      width: 100%;
-      height: 100%;
+      width: 50%;
+      height: 50%;
     }
 
     .swiper-slide {
@@ -450,7 +450,7 @@ h3  { text-decoration: underline overline;
     }
   </style>
 </head>
-</body>
+<body>
 <!-- Swiper -->
   <div class="swiper-container">
     <div class="swiper-wrapper">
@@ -476,8 +476,10 @@ h3  { text-decoration: underline overline;
         disableOnInteraction: true,
       },
     });
-  </script>
-
+	</script>
+	</body>
+	</html>
+	<html>
 </p><p><strong>Harga Sewa : Rp. 200.000 / Malam (harga untuk 2 orang)</strong></p>
 
 <ul>
