--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="id-ID">
-	<head>
+<head>
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -396,6 +396,7 @@ h3  { text-decoration: underline overline;
   <p><img src="/uploads/content-5b18a82fb5c8e-e1560855835374.jpg" alt="" width="150" height="113" /></p>
 </blockquote>
 				</html>
+			<div>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -478,6 +479,7 @@ h3  { text-decoration: underline overline;
 	</script>
 	</body>
 	</html>
+	</div>
 	<html>
 </p><p><strong>Harga Sewa : Rp. 200.000 / Malam (harga untuk 2 orang)</strong></p>
 
