--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -396,7 +396,7 @@ h3  { text-decoration: underline overline;
   <p><img src="/uploads/content-5b18a82fb5c8e-e1560855835374.jpg" alt="" width="150" height="113" /></p>
 </blockquote>
 				</html>
-			<div>
+<div class="staff-details">			
 <!DOCTYPE html>
 <html lang="en">
 
