--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -395,8 +395,8 @@ h3  { text-decoration: underline overline;
 				<p><blockquote>
   <p><img src="/uploads/content-5b18a82fb5c8e-e1560855835374.jpg" alt="" width="150" height="113" /></p>
 </blockquote>
-				</html>
-<div class="staff-details">			
+				
+<blockquote>			
 <!DOCTYPE html>
 <html lang="en">
 
@@ -479,7 +479,7 @@ h3  { text-decoration: underline overline;
 	</script>
 	</body>
 	</html>
-	</div>
+				</blockquote>
 	<html>
 </p><p><strong>Harga Sewa : Rp. 200.000 / Malam (harga untuk 2 orang)</strong></p>
 
