--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -392,9 +392,7 @@ h3  { text-decoration: underline overline;
 			</div>
 
 			<div class="staff-bio">
-				<p><blockquote>
-  <p><img src="/uploads/content-5b18a82fb5c8e-e1560855835374.jpg" alt="kamar-deluxe" width="150" height="113" text-align="center"></p>
-</blockquote>
+<img src="/uploads/content-5b18a82fb5c8e-e1560855835374.jpg" alt="kamar-deluxe" width="150" height="113" text-align="center">
 				
 <p>			
 <!DOCTYPE html>
