--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -268,7 +268,7 @@ input[type=submit]:hover, .btn:hover { color: #fefefe; background-color: #73a9c9
 /*# sourceMappingURL=main.css.map */
  
 nav  {position:flex; width:100%; display:flex; justify-content:center; background:rgba(255,255,255,0.5);z-index:999}
-nav a {display:inline-block; text-decoration:bold; padding:4px; color:#fff; letter-spacing:1px; font-size:1em; text-shadow:1px 1px 1px #aaa} nav a.active {color:red} nav a:hover {color:#000}
+nav a {display:inline-block; text-decoration:bold; padding:4px; color:#000; letter-spacing:1px; font-size:1em; text-shadow:1px 1px 1px #aaa} nav a.active {color:red} nav a:hover {color:#000}
 span.wave {
   animation-name: wave-animation;
   animation-duration: 2.5s;
@@ -392,9 +392,9 @@ h3  { text-decoration: underline overline;
 			</div>
 
 			<div class="staff-bio">
-<img src="/uploads/content-5b18a82fb5c8e-e1560855835374.jpg" alt="kamar-deluxe" width="150" height="113" text-align="center">
-				
-<p>			
+<img src="/uploads/content-5b18a82fb5c8e-e1560855835374.jpg" alt="kamar-deluxe" width="150" height="113" class="center">
+			</div>				
+<div class="staff-bio">			
 <!DOCTYPE html>
 <html lang="en">
 
@@ -477,6 +477,7 @@ h3  { text-decoration: underline overline;
 	</script>
 	</body>
 	</html>
+	</div>
 				</p>
 </p><p><strong>Harga Sewa : Rp. 200.000 / Malam (harga untuk 2 orang)</strong></p>
 
