--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -402,7 +402,7 @@ h3  { text-decoration: underline overline;
   <meta charset="utf-8">
   <title>Bening Room</title>
 
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 <!-- Demo styles -->
