--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -394,7 +394,7 @@ h3  { text-decoration: underline overline;
 			<div class="staff-bio">
 <img src="/uploads/content-5b18a82fb5c8e-e1560855835374.jpg" alt="kamar-deluxe" width="150" height="113" class="center">
 			</div>				
-<div class="staff-bio">			
+<p>		
 <!DOCTYPE html>
 <html lang="en">
 
@@ -477,9 +477,8 @@ h3  { text-decoration: underline overline;
 	</script>
 	</body>
 	</html>
-	</div>
 				</p>
-</p><p><strong>Harga Sewa : Rp. 200.000 / Malam (harga untuk 2 orang)</strong></p>
+<p><strong>Harga Sewa : Rp. 200.000 / Malam (harga untuk 2 orang)</strong></p>
 
 <ul>
   <li>
