--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="id-ID">
 <head>
-<!-- Google Tag Manager -->
+<!-- Google Tag Manager -->9
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
@@ -442,8 +442,8 @@ h3  { text-decoration: underline overline;
     }
 
     .swiper-container {
-      width: 100%;
-      height: 100%;
+      width: 320px;
+      height: 240px;
     }
 
     .swiper-slide {
