--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="id-ID">
 <head>
-<!-- Google Tag Manager -->9
+<!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
@@ -429,7 +429,7 @@ h3  { text-decoration: underline overline;
     html,
     body {
       position: relative;
-      height: 60%;
+      height: 50%;
     }
 
     body {
