--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -413,7 +413,6 @@ h3  { text-decoration: underline overline;
 </ul>
 <p></p>
 			</div>
-		</li>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -506,7 +505,7 @@ h3  { text-decoration: underline overline;
 
 			<div class="staff-bio">
 				<p><blockquote>
-  <p><img src="/uploads/content-5b18a8a3a357f-e1561076685884.jpg" alt="" width="150" height="113" /></p>
+  <p><img src="/uploads/content-5b18a8a3a357f-e1561076685884.jpg" alt="" width="150" height="113"></p>
 </blockquote>
 
 </p><p><strong>Harga Sewa : Rp. 150.000 / Malam (harga untuk 2 orang)</strong></p>
