--- a/rental-mobil/index.html
+++ b/rental-mobil/index.html
@@ -37,6 +37,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 {"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://beningabaditransport.com/siteicon.png"}},"@type":"WebSite","headline":"Sewa Motor, Rental Mobil, Penginapan","url":"https://beningabaditransport.com/","description":"Sewa Motor Jogja Rental Mobil Yogyakarta Penginapan Murah Lokasi UGM UNY Harga Mahasiswa Pelajar Umum Murah Terjangkau","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <style>
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 html { font-size: 11px; -webkit-tap-highlight-color: transparent; }
 
 @media (min-width: 700px) { html { font-size: 11px; } }
