--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -412,7 +412,7 @@ h3  { text-decoration: underline overline;
   </li>
 </ul>
 <p></p>
-			</div>
+			<div>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -495,6 +495,7 @@ h3  { text-decoration: underline overline;
 	</script>
 	</body>
 	</html>	
+</div>
 		
 			<div class="staff-details">
 				<ul class="staff-info">
