--- a/sewa-motor/index.html
+++ b/sewa-motor/index.html
@@ -741,6 +741,88 @@ h3  { text-decoration: underline overline;
 
 		</section>
 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <title>Bening Room</title>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<!-- Demo styles -->
+  <style>
+    html,
+    body {
+      position: relative;
+      height: 50%;
+    }
+
+    body {
+      background: #eee;
+      font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+      font-size: 14px;
+      color: #000;
+      margin: 0;
+      padding: 0;
+    }
+
+    .swiper-container {
+      width: 320px;
+      height: 240px;
+    }
+
+    .swiper-slide {
+      text-align: center;
+      font-size: 18px;
+      background: #fff;
+
+      /* Center slide text vertically */
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      -webkit-justify-content: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      -webkit-align-items: center;
+      align-items: center;
+    }
+  </style>
+</head>
+<body>
+<!-- Swiper -->
+  <div class="swiper-container">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k1.jpg"></div>
+      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k2.jpg"></div>
+      <div class="swiper-slide"><img src="https://raw.githubusercontent.com/ariefbuddies/bening-out/master/uploads/k3.jpg"></div>
+    </div>
+</div>
+   <!-- Add Pagination -->
+    <div class="swiper-pagination"></div>
+  </div>
+ <!-- Swiper JS -->
+
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+  <!-- Initialize Swiper -->
+  <script>
+    var swiper = new Swiper('.swiper-container', {
+      spaceBetween: 60,
+      centeredSlides: true,
+      autoplay: {
+        delay: 4000,
+        disableOnInteraction: true,
+      },
+    });
+	</script>
+	</body>
+	</html>	
         
 
 			<section class="quote-section">
