--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -441,8 +441,8 @@ h3  { text-decoration: underline overline;
     }
 
     .swiper-container {
-      width: 320px;
-      height: 240px;
+      width: 100%;
+      height: 100%;
     }
 
     .swiper-slide {
