--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -441,7 +441,7 @@ h3  { text-decoration: underline overline;
     }
 
     .swiper-container {
-      width: 100%;
+      width: 320px;
       height: 100%;
     }
 
