--- a/penginapan/index.html
+++ b/penginapan/index.html
@@ -442,7 +442,7 @@ h3  { text-decoration: underline overline;
 
     .swiper-container {
       width: 320px;
-      height: 100%;
+      height: 280px;
     }
 
     .swiper-slide {
