--- a/sewa-motor/index.html
+++ b/sewa-motor/index.html
@@ -313,7 +313,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     
 
-		<a href="/sewa-motor/" class=" active">Sewa-Motor</a>
+		<a href="/sewa-motor/" class=" active">SewAMotor</a>
 
 	
 
@@ -321,7 +321,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     
 
-		<a href="/rental-mobil/">Rental-Mobil</a>
+		<a href="/rental-mobil/">RentaLMobil</a>
 
 	
 
