--- a/404.html
+++ b/404.html
@@ -305,11 +305,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	
 	
     
-		<a href="/sewa-motor/">Sewa-Motor</a>
+		<a href="/sewa-motor/">SewAMotor</a>
 
 
 
-                <a href="/rental-mobil/">Rental-Mobil</a>
+                <a href="/rental-mobil/">RentaLMobil</a>
 	
 	
     
