--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </body>
 </html>
 <div class="iframe-container">
-<iframe width="320" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=320&amp;height=300&amp;hl=en&amp;q=Bening%20Abadi%20Sleman+(Bening%20Abadi)&amp;t=&amp;z=12&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><br><p align="center"><a href='http://www.mapsiframe.net/'>LOKASI BENING ABADI TRANSPORT & GUEST HOUSE</a></p><script type='text/javascript' src='https://maps-generator.com/google-maps-authorization/script.js?id=49c2a4e2d62c19d24ab4d21507c758a871cf8c45'></script>
+<iframe width="320" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=320&amp;height=300&amp;hl=en&amp;q=Bening%20Abadi%20Sleman+(Bening%20Abadi)&amp;t=&amp;z=12&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><br><p align="center"><a href='https://g.page/bening-abadi-transport?share'>LOKASI BENING ABADI TRANSPORT & GUEST HOUSE</a></p><script type='text/javascript' src='https://maps-generator.com/google-maps-authorization/script.js?id=49c2a4e2d62c19d24ab4d21507c758a871cf8c45'></script>
 </div>
 
 <style>
