--- a/objek-wisata-jogja/index.html
+++ b/objek-wisata-jogja/index.html
@@ -31,8 +31,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <meta name="twitter:title" content="Bening Abadi Transport" />
 <meta name="twitter:description" content="Obyek Wisata Jogja" />
 <meta name="twitter:image" content="http://beningabaditransport.com/uploads/logo-bening.png" />
-<link rel="canonical" href="https://beningabaditransport.com" />
-<meta property="og:url" content="https://beningabaditransport.com/" />
+<link rel="canonical" href="https://beningabaditransport.com/obyek-wisata-jogja/" />
+<meta property="og:url" content="https://beningabaditransport.com/obyek-wisata-jogja/" />
 <script type="application/ld+json">
 {"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://beningabaditransport.com/siteicon.png"}},"@type":"WebSite","headline":"Sewa Motor, Rental Mobil, Penginapan","url":"https://beningabaditransport.com/","description":"Sewa Motor Jogja Rental Mobil Yogyakarta Penginapan Murah Lokasi UGM UNY Harga Mahasiswa Pelajar Umum Murah Terjangkau","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
