--- a/contact-success/index.html
+++ b/contact-success/index.html
@@ -31,10 +31,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <meta name="twitter:title" content="Bening Abadi Transport" />
 <meta name="twitter:description" content="Rental dan Sewa Mobil Yogya, Penginapan Yogyakarta" />
 <meta name="twitter:image" content="http://beningabaditransport.com/uploads/logo-bening.png" />
-<link rel="canonical" href="https://beningabaditransport.com/contact-sucess/" />
-<meta property="og:url" content="https://beningabaditransport.com/contact-sucess" />
+<link rel="canonical" href="https://beningabaditransport.com/contact-success/" />
+<meta property="og:url" content="https://beningabaditransport.com/contact-success" />
 <script type="application/ld+json">
-{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://beningabaditransport.com/siteicon.png"}},"@type":"WebSite","headline":"Kontak Sukses","url":"https://beningabaditransport.com/contact-succes","description":"Sewa Motor Jogja Rental Mobil Yogyakarta Penginapan Murah Lokasi UGM UNY Harga Mahasiswa Pelajar Umum Murah Terjangkau","@context":"https://schema.org"}</script>
+{"publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://beningabaditransport.com/siteicon.png"}},"@type":"WebSite","headline":"Kontak Sukses","url":"https://beningabaditransport.com/contact-success","description":"Sewa Motor Jogja Rental Mobil Yogyakarta Penginapan Murah Lokasi UGM UNY Harga Mahasiswa Pelajar Umum Murah Terjangkau","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <style>
 html { font-size: 11px; -webkit-tap-highlight-color: transparent; }
