--- a/index.html
+++ b/index.html
@@ -333,10 +333,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	</div>
 <div class="testimonials">
 <blockquote class="testimonial">
-			<p class="testimonial-message"><a href="/rental-mobil" title="Rental Mobil Yogya">Sewa mobil lepas kunci mulai 250 ribu perhari!!</a></p><p><img alt="mobil" src="/uploads/m14.jpg" width="260" height="139"></p>
+			<p class="testimonial-message"><a href="/rental-mobil" title="Rental Mobil Yogya"><h6>Sewa mobil lepas kunci mulai 250 ribu perhari!!</h6></a></p><p><img alt="mobil" src="/uploads/m14.jpg" width="260" height="139"></p>
 		</blockquote>
 <blockquote class="testimonial">
-			<p class="testimonial-message"><a href="/penginapan" title="Penginapan Yogya">Nginep nyaman semaleman cuma 150 ribu!!</a></p><p><img alt="kamar" src="/uploads/kamar-icon1.webp" width="260" height="139"></p>
+			<p class="testimonial-message"><a href="/penginapan" title="Penginapan Yogya"><h6>Nginep nyaman semaleman cuma 150 ribu!!</h6></a></p><p><img alt="kamar" src="/uploads/kamar-icon1.webp" width="260" height="139"></p>
 		</blockquote>             
 </div>
 </article>
