--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ h4 { font-size: 1.5rem; }
 
 h5 { font-size: .9rem; }
 
-h6 { font-size: 2rem; }
+h6 { font-size: .8rem; }
 
 a { color: #4489b1; transition: color 0.2s ease; text-decoration: italic; }
 
