--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<p class="testimonial-message"><a href="/rental-mobil" title="Rental Mobil Yogya"><h6>Sewa mobil lepas kunci mulai 250 ribu perhari!!</h6></a></p><p><img alt="mobil" src="/uploads/m14.jpg" width="260" height="139"></p>
 		</blockquote>
 <blockquote class="testimonial">
-			<p class="testimonial-message"><a href="/penginapan" title="Penginapan Yogya"><small>Nginep nyaman semaleman cuma 150 ribu!!&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</small></a></p><p><img alt="kamar" src="/uploads/kamar-icon1.webp" width="260" height="139"></p>
+			<p class="testimonial-message"><a href="/penginapan" title="Penginapan Yogya"><small>Nginep nyaman semaleman cuma 150 ribu!!&emsp;&emsp;</small></a></p><p><img alt="kamar" src="/uploads/kamar-icon1.webp" width="260" height="139"></p>
 		</blockquote>             
 </div>
 </article>
