--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <meta name="twitter:site" content="@beningabad1" />
 <meta name="twitter:creator" content="@beningabad1" />
 <meta name="twitter:title" content="Bening Abadi Transport" />
-<meta name="twitter:description" content="Rental Motor dan Sewa Mobil Jogja, Penginapan Yogyakarta" />
+<meta name="twitter:description" content="Rental Motor, Sewa Mobil Jogja dan Penginapan Yogyakarta" />
 <meta name="twitter:image" content="http://beningabaditransport.com/uploads/logo-bening.png" />
 <link rel="canonical" href="https://beningabaditransport.com" />
 <meta property="og:url" content="https://beningabaditransport.com/" />
@@ -311,10 +311,10 @@ span.wave {
 <section class="main">
 <div class="container">
 	<div class="page-header"> 
-         <h1>Rental Mobil Jogja Penginapan Murah Yogyakarta</h1><hr>
+         <h1>Rental Motor Sewa Mobil Jogja Penginapan Murah Yogyakarta</h1><hr>
 	</div>
 <article class="content" data-cms-content-wrapper="/_layouts/page.html">
-	<h3><q>Sewa Motor Mulai <span class="stabilo">60rb/Hari</span> | Rental Mobil Mulai <span class="stabilo">250rb/Hari</span> | Penginapan Mulai <span class="stabilo">150rb/Hari</span></q></h3><h2><q><span class="stabilo">Telp. 0274-583197 &amp; 0274-547440 Untuk informasi lebih lanjut dan booking.</span></q></h2>
+	<h3><q>Rental Motor Mulai <span class="stabilo">60rb/Hari</span> | Sewa Mobil Mulai <span class="stabilo">250rb/Hari</span> | Penginapan Mulai <span class="stabilo">150rb/Hari</span></q></h3><h2><q><span class="stabilo">Telp. 0274-583197 &amp; 0274-547440 Untuk informasi lebih lanjut dan booking.</span></q></h2>
 <div class="boxed">
 <p class="small"><q>Sejak tahun 2010 Bening Abadi Transport telah berkecimpung di bidang transportasi dan penginapan murah di Yogyakarta, dengan lokasi yang strategis berdekatan dengan kampus terkenal seperti UGM dan UNY Jogja. Sewa motor, rental mobil, penginapan dan guest house adalah layanan utama kami di kota jogja. Untuk guest house kamar yang kami tawarkan juga bisa anda booking melalui aplikasi Traveloka dengan harga yang lebih murah dan terjangkau untuk mahasiswa dan pelajar yogya. Semoga ke depan kami bisa memberikan pelayanan yang lebih baik kepada pelanggan pelanggan setia Bening Abadi Transport.<span class="wave">👋</span></q></p><hr>
 		<p><img alt="logo bening" width="200" height="50" src="/uploads/logo-bening.webp"></p>
