--- a/index.html
+++ b/index.html
@@ -347,9 +347,6 @@ span.wave {
 				<p><blockquote>
   <p><img src="/uploads/veloz.jpg" alt="" width="650" height="450" /></p>
 </blockquote>
-
-</p><h4 id="harga-sewa"><strong>HARGA SEWA</strong></h4>
-
 <h4 id="lepas-kunci">LEPAS KUNCI</h4>
 
 <ul>
@@ -394,9 +391,6 @@ span.wave {
 
 			<div class="staff-bio">
 				<p></p><p><img src="/uploads/avanza-manual.jpg" alt="" width="650" height="450" /></p>
-
-<h4 id="harga-sewa--"><br />HARGA SEWA    </h4>
-
 <h4 id="lepas-kunci--">LEPAS KUNCI    </h4>
 
 <ul>
@@ -443,9 +437,6 @@ span.wave {
 
 			<div class="staff-bio">
 				<p></p><p><img src="/uploads/brio-manual.jpg" alt="" width="650" height="450" /></p>
-
-<h4 id="harga-sewa"><strong>HARGA SEWA</strong></h4>
-
 <h4 id="lepas-kunci">LEPAS KUNCI</h4>
 
 <ul>
@@ -485,14 +476,12 @@ span.wave {
 			<div class="staff-details">
 				<ul class="staff-info">
 					<li>Honda Brio Matic</li>
-					<li><small><p style="color:red">300K / hari (Lepas Kunci)</p></small></li>
+					<li><small><p style="color:red">300K / hari (Lepas Kunci)</p></small.</li>
 				</ul>
 			</div>
 
 			<div class="staff-bio">
 				<p></p><p><img src="/uploads/brio.jpg" alt="" width="650" height="450" /></p>
-
-<h4 id="harga-sewa">HARGA SEWA</h4>
 
 <h4 id="lepas-kunci--">LEPAS KUNCI    </h4>
 
@@ -517,9 +506,9 @@ span.wave {
 
 			<div class="staff-bio">
 				<p><blockquote>
-  <h4 id="harga-sewa"><strong>HARGA SEWA</strong></h4>
 
-  <h4 id="lepas-kunci">LEPAS KUNCI</h4>
+
+ <h4 id="lepas-kunci">LEPAS KUNCI</h4>
 
   <ul>
     <li>
@@ -547,9 +536,6 @@ span.wave {
 				<p><blockquote>
   <p><img src="/uploads/agya.jpg" alt="" width="300" height="225" /></p>
 </blockquote>
-
-</p><h4 id="harga-sewa"><strong>HARGA SEWA</strong></h4>
-
 <h4 id="lepas-kunci">LEPAS KUNCI</h4>
 
 <ul>
@@ -597,9 +583,6 @@ span.wave {
 				<p><blockquote>
   <p><img src="/uploads/calya.jpg" alt="" width="300" height="225" /></p>
 </blockquote>
-
-</p><h4 id="harga-sewa"><strong>HARGA SEWA</strong></h4>
-
 <h4 id="lepas-kunci">LEPAS KUNCI</h4>
 
 <ul>
@@ -646,9 +629,6 @@ span.wave {
 				<p><blockquote>
   <p><img src="/uploads/content-5b0bed6990b95.jpg" alt="" width="800" height="600" /></p>
 </blockquote>
-
-</p><h4 id="harga-sewa">HARGA SEWA</h4>
-
 <h4 id="lepas-kunci">LEPAS KUNCI</h4>
 
 <ul>
